# upsilon_garden_rust

./: .gitignore  Cargo.toml  README.md
db/: schema.sql
src/: config.rs.sample  db.rs  main.rs
src/engine/: garden.rs  hydro_event.rs  mod.rs  parcel.rs  plant.rs
src/web/: server.rs
src/web/controllers/garden/: api.rs
src/web/controllers/plant/: mod.rs
