[package]

name = "upsilon_garden_rust"
version = "0.0.1"
authors = [ "Bastien Barcaioni" ]

[dependencies]

rand = "0.4.0"
serde_derive = "1.0"
serde_json = "1.0"
postgres = { version = "0.15", features = ["with-serde_json","with-chrono"] }
envy = "0.3.2"
dotenv = "0.11.0"
serde = "1.0.37"
chrono =  { version = "0.4", features = ["serde"] }
log = "0.4.0"
env_logger = "0.5.6"
rocket = "0.3.7"
rocket_codegen = "0.3.7"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]

